--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -102,6 +102,9 @@
                                                             <a href="/setup/best-practices">Best Practices</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/setup/integrations">Integrations</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -328,7 +331,7 @@
                                                         </div>
                                                 </div>
                                 </div>
-                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
+                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Motion activity is a great mechanism for querying for how your user is moving.  This set of API's works slightly different than other APIs in Shiny.  iOS does not allow watching for these events in the background, but it allows you to query by date/time range (careful, the query can yield A LOT of data).  In order to emulate this same queryable mechanism on Android, Shiny starts up a broadcast receiver that continually receives events and stores them in a local SQLite database.</p>
 <p>The events captured by this API are</p>
 <ul>
