--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -102,6 +102,9 @@
                                                             <a href="/setup/best-practices">Best Practices</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/setup/integrations">Integrations</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -328,7 +331,7 @@
                                                         </div>
                                                 </div>
                                 </div>
-                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
+                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>You may ask "what does local notifications" have to do with device or background services?  Well.... turns out quite a bit.  You need a way
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
