--- a/other/sqlite.html
+++ b/other/sqlite.html
@@ -104,6 +104,9 @@
                                                             <a href="/setup/best-practices">Best Practices</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/setup/integrations">Integrations</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -330,7 +333,7 @@
                                                         </div>
                                                 </div>
                                 </div>
-                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
+                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Install from NuGet: <a href="https://www.nuget.org/packages/Shiny.Integrations.Sqlite/" target="Shiny.Integrations.Sqlite"><img src="https://img.shields.io/nuget/v/Shiny.Integrations.Sqlite.svg?style=for-the-badge" /></a></p>
 <p>The SQLite integration provides several overrides to the built-in modules within Shiny.</p>
 <ul>
