--- a/setup/nuget.html
+++ b/setup/nuget.html
@@ -103,6 +103,9 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/best-practices">Best Practices</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/setup/integrations">Integrations</a>
+                                                        </div>
                                                         <div class="sidebar-nav-child active">
                                                             <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
@@ -330,7 +333,7 @@
                                                         </div>
                                                 </div>
                                 </div>
-                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
+                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <h2 id="packages">Packages</h2>
 <h1 id="section"></h1>
 <table>
