--- a/other/messagebus.html
+++ b/other/messagebus.html
@@ -104,6 +104,9 @@
                                                             <a href="/setup/best-practices">Best Practices</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/setup/integrations">Integrations</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -330,7 +333,7 @@
                                                         </div>
                                                 </div>
                                 </div>
-                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
+                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The message bus in Shiny is used in numerous places within the core code.  It is an RX first approach to passing decoupled messaging throughout the system.</p>
 
                                 </div>
