--- a/setup/integrations.html
+++ b/setup/integrations.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Platform - Android</title>
+    <title>Shiny.NET - Integrations</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Platform - Android</div>
+                                <div class="text-white m-0 title">Integrations</div>
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/android">Platform - Android</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -103,7 +103,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/best-practices">Best Practices</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,94 +334,11 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>Shiny integrates well with Android, but requires several hook points.  Unlike Xamarin Forms applications where you only need to hook into an activity, Shiny
-requires an Android application.  From an architectural standpoint, this is to ensure all of the Shiny services can be spun up before an Android broadcast receiver
-can run.</p>
-<h1 id="todo">TODO</h1>
-<pre><code class="language-csharp">using System;
-using Shiny;
-using Android.App;
-using Android.Content;
-using Android.Runtime;
-
-
-namespace Samples.Android
-{
-	[global::Android.App.ApplicationAttribute]
-	public partial class MainApplication : global::Android.App.Application
-	{
-		public MainApplication(IntPtr handle, JniHandleOwnership transfer) : base(handle, transfer) {}
-
-		public override void OnCreate()
-		{
-			this.ShinyOnCreate(new Samples.SampleStartup());
-			global::Xamarin.Essentials.Platform.Init(this);
-			base.OnCreate();
-		}
-	}
-}
-
-
-
-using System;
-using Shiny;
-using Android.App;
-using Android.Content;
-using Android.Content.PM;
-using Android.OS;
-using Android.Runtime;
-
-
-namespace Samples.Droid
-{
-	public partial class MainActivity
-	{
-		partial void OnPreCreate(Bundle savedInstanceState);		
-        partial void OnPostCreate(Bundle savedInstanceState);		
-        
-        protected override void OnCreate(Bundle savedInstanceState)
-		{
-			this.ShinyOnCreate();
-			this.OnPreCreate(savedInstanceState);
-			TabLayoutResource = Resource.Layout.Tabbar;
-			ToolbarResource = Resource.Layout.Toolbar;
-			base.OnCreate(savedInstanceState);
-			global::Xamarin.Forms.Forms.Init(this, savedInstanceState);
-			this.LoadApplication(new Samples.App());
-			global::XF.Material.Droid.Material.Init(this, savedInstanceState);
-			this.OnPostCreate(savedInstanceState);
-		}
-
-		protected override void OnNewIntent(Intent intent)
-		{
-			base.OnNewIntent(intent);
-			this.ShinyOnNewIntent(intent);
-		}
-
-		protected override void OnActivityResult(int requestCode, Result resultCode, Intent data)
-		{
-			base.OnActivityResult(requestCode, resultCode, data);
-			this.ShinyOnActivityResult(requestCode, resultCode, data);
-		}
-	
-		public override void OnRequestPermissionsResult(int requestCode, string[] permissions, [GeneratedEnum] Permission[] grantResults)
-		{
-			base.OnRequestPermissionsResult(requestCode, permissions, grantResults);
-			this.ShinyOnRequestPermissionsResult(requestCode, permissions, grantResults);
-			global::Xamarin.Essentials.Platform.OnRequestPermissionsResult(requestCode, permissions, grantResults);
-		}
-	}
-}
-
-</code></pre>
+                                    <p>Prism, ReactiveUI, &amp; Shiny = <a href="https://www.nuget.org/packages/Shiny.Framework/" target="Shiny.Framework"><img src="https://img.shields.io/nuget/v/Shiny.Framework.svg?style=for-the-badge" /></a></p>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                        <div class="border-bottom mb-3">
-                                            <p class="small font-weight-bold">On This Page</p>
-                                                <p class="small"><a href="#todo">TODO</a></p>
-                                        </div>
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/setup/android.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/setup/integrations.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
