--- a/setup/statics.html
+++ b/setup/statics.html
@@ -104,6 +104,9 @@
                                                             <a href="/setup/best-practices">Best Practices</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/setup/integrations">Integrations</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/nuget">NuGet Packages</a>
                                                         </div>
                                                         <div class="sidebar-nav-child active">
@@ -330,7 +333,7 @@
                                                         </div>
                                                 </div>
                                 </div>
-                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
+                                <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <h1 id="statics">Statics</h1>
 <p>Using Shiny without dependency injection is not only possible, it is quite easy to do.  Do also you like the old plugin style of CrossPlugin.Current?  Then you've come to the right document.  You may be thinking, why not just include these as part of the package?  Several reasons actually, first being - statics don't make as easily testable and the second, statics don't adhere to interfaces and Shiny is always evolving.  I got tired of trying to keep things in sync.  By adding a generation option, it makes things good for all of us.</p>
 <p>Under the hood, you are still using dependency injection and you still need a startup file, BUT, you can have all of the static versions of each service generated in a project of your choice by simply adding the following to your assembly attributes:</p>
